removing superfluous styling covered by body inheritance and fixed an unclosed a tag.

--- a/html/assets/stylesheets/homepage.css
+++ b/html/assets/stylesheets/homepage.css
@@ -96,14 +96,6 @@ div.reddit {
 	margin-right: auto;
 }
 
-div.night {
-	outline-color: #ffff8d;
-}
-
-div.day {
-	outline-color: #616161;
-}
-
 .image_size {
 	max-height: 400px;
 	max-width: 750px;
